[package]
name = "vulkan_engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Sakul6499/Vulkan-Engine"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
log = "0.4"
vulkano = "0.33"

[dev-dependencies]
env_logger = "0.10"
vulkano-shaders = "0.33"
